web-infras/parser/tests/fixtures/babel/es2015/for-in/strict-initializer/output.txt
[SyntaxError]: 'for-in' loop variable declaration may not have an initializer. (2,10)
2|for (var a = 0 in {});
 |        ^
